Add some extra stuff

--- a/index.html
+++ b/index.html
@@ -7,5 +7,13 @@
        <img src="http://media.gettyimages.com/photos/low-angle-view-of-a-horse-with-its-mouth-open-picture-id74424564">
        <h1>Hello!</h1>
        <p>I'm at Local Hack Day</p>
+       <h3>This is a smaller heading</h3>
+       <p class="different-font">And this has a different font</p>
+       <p class="bigger-bolder">And this is bigger and bolder!</p>
+       <div class="background">
+          <p class="left">This is left align</p>
+          <p class="right">And this is right align</p>
+          <p class="font-color">While the color of this is blue<p>
+       </div>
     </body>
 </html>
